# claude-code-loop-patterns

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  scorecard.yml
01-structured-shell/: README.md  run_loud.py
02-structured-tests/: README.md  pytest_jsonl_reporter.py
03-verification-gate/: README.md  check_evidence.py  gates.example.txt  verify.py  verify.sh
04-stop-hook/: README.md  no_completion_without_evidence.py  settings.example.json
05-prompt-cache/: README.md  cacheable_prompt.py
assets/: README.md
docs/: RELEASING.md
skills/: README.md
skills/loop-failure-triage/: SKILL.md
skills/read-before-edit/: SKILL.md
skills/verify-before-done/: SKILL.md
tests/: conftest.py  test_prompt_cache.py  test_pytest_reporter.py  test_run_loud.py  test_skills.py  test_verification.py
