[project]
name = "claude-code-loop-patterns"
version = "0.1.0"
description = "Reference implementations for verifiable Claude Code operating loops"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Michael Isaac" }]
dependencies = []

[dependency-groups]
dev = [
  "mypy>=1.19,<3",
  "pip-audit>=2.10,<3",
  "pytest>=9.1,<10",
  "pytest-cov>=7,<8",
  "pyyaml>=6,<7",
  "ruff>=0.15,<0.16",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.coverage.run]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
